Updated Java versions, adjusted test programs' code and reran them